--- a/GAL/GAL.vcxproj.filters
+++ b/GAL/GAL.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="detail\Texture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="detail\debug.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
