glm uniform setters

--- a/GAL/GAL.vcxproj
+++ b/GAL/GAL.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="detail\Buffer.hpp" />
     <ClInclude Include="detail\debug.hpp" />
     <ClInclude Include="detail\enums.hpp" />
+    <ClInclude Include="detail\glmIncludes.hpp" />
     <ClInclude Include="detail\glParams.hpp" />
     <ClInclude Include="detail\init.hpp" />
     <ClInclude Include="detail\keyboard.hpp" />
