added some of the cube vertex generation but yet to test

--- a/GAL/GAL.vcxproj.filters
+++ b/GAL/GAL.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="detail\glmIncludes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="detail\shapes.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
