--- a/GAL Testing/GAL Testing.vcxproj
+++ b/GAL Testing/GAL Testing.vcxproj
@@ -136,8 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\container.jpeg" />
+    <Image Include="resources\container.jpg" />
     <Image Include="resources\pone.png" />
     <Image Include="resources\tar child.jpg" />
+    <Image Include="resources\tar_child.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
