--- a/GAL/GAL.vcxproj.filters
+++ b/GAL/GAL.vcxproj.filters
@@ -74,7 +74,7 @@
     <ClInclude Include="detail\glmIncludes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="detail\shapes.hpp">
+    <ClInclude Include="shapes.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
