--- a/GAL/GAL.vcxproj.filters
+++ b/GAL/GAL.vcxproj.filters
@@ -86,5 +86,11 @@
     <ClInclude Include="detail\MeshInstance.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="detail\Camera.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="detail\state.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
